@@ -120,5 +120,6 @@ class io_buf {
 
 void buf_write(io_buf &o, char* &pointer, int n);
 unsigned int buf_read(io_buf &i, char* &pointer, int n);
+bool isbinary(io_buf &i);
 size_t readto(io_buf &i, char* &pointer, char terminal);
 #endif
