@@ -1,6 +1,6 @@
 #ifndef NETWORK_H
 #define NETWORK_H
 
-int open_socket(const char* host, size_t new_id);
+int open_socket(const char* host);
 
 #endif
